# shared/pkg/openapi/app/v1/oas_request_encoders_gen.go
@@ -24,3 +24,17 @@ func encodeAuthLoginPostRequest(
 	ht.SetBody(r, bytes.NewReader(encoded), contentType)
 	return nil
 }
+
+func encodeAuthRefreshPostRequest(
+	req *RefreshRequest,
+	r *http.Request,
+) error {
+	const contentType = "application/json"
+	e := new(jx.Encoder)
+	{
+		req.Encode(e)
+	}
+	encoded := e.Bytes()
+	ht.SetBody(r, bytes.NewReader(encoded), contentType)
+	return nil
+}
