# shared/pkg/openapi/app/v1/oas_response_encoders_gen.go
@@ -55,6 +55,20 @@ func encodeAuthMeGetResponse(response *UserMe, w http.ResponseWriter, span trace
 	return nil
 }
 
+func encodeAuthRefreshPostResponse(response *AuthToken, w http.ResponseWriter, span trace.Span) error {
+	w.Header().Set("Content-Type", "application/json; charset=utf-8")
+	w.WriteHeader(200)
+	span.SetStatus(codes.Ok, http.StatusText(200))
+
+	e := new(jx.Encoder)
+	response.Encode(e)
+	if _, err := e.WriteTo(w); err != nil {
+		return errors.Wrap(err, "write")
+	}
+
+	return nil
+}
+
 func encodeErrorResponse(response *ErrorStatusCode, w http.ResponseWriter, span trace.Span) error {
 	w.Header().Set("Content-Type", "application/json; charset=utf-8")
 	code := response.StatusCode
